[tool.poetry]
name = "proxycrawler"
version = "0.2.7"
description = "A proxy scrapper and validator"
authors = ["ramsy0dev <ramsy0dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
user-agent = "^0.1.10"
sqlalchemy = "^2.0.31"
typer = "^0.12.3"
rich = "^13.8.0"

[tool.poetry.scripts]
proxycrawler = 'proxycrawler.__main__:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
