[tool.poetry]
name = "proxycrawler"
version = "0.2.7"
description = "A proxy scrapper and validator"
authors = ["ramsy0dev <ramsy0dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.13.1"
requests = "^2.32.3"
user-agent = "^0.1.10"
sqlalchemy = "^2.0.38"
typer = "^0.15.1"
rich = "^13.9.4"

[tool.poetry.scripts]
proxycrawler = 'proxycrawler.__main__:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
